# securethebox_client_rs

./: .firebaserc  .gitignore  .travis.yml  .travis_template.yml  Cargo.toml  Makefile.toml  README.md  Session.vim  firebase.json  index.html  pier.toml
graphql/: mutations.graphql  queries.graphql  schema.graphql  subscriptions.graphql
pkg/: index.html
src/: client.rs  lib.rs  shared.rs
src/controllers/: mod.rs
static/: index.html
tests/controllers/: travis.rs
