[package]
name = "securethebox_client_rs"
version = "0.1.0"
authors = ["Denis Kolodin <deniskolodin@gmail.com>"]
edition = "2018"

[[bin]]
name = "securethebox_client_rs_app"
path = "src/bin/app.rs"

[[bin]]
name = "securethebox_client_rs_worker"
path = "src/bin/native_worker.rs"

[dependencies]
log = "0.4"
wasm-logger = "0.2"
serde = "1.0"
serde_derive = "1.0"
yew = { version = "0.15.0"}

# common
flate2 = "1.0.14"
tar = "0.4.26"
yaml-rust = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "1.0"
snailquote = "0.3.0"