[package]
name = "securethebox_client_rs"
version = "0.1.0"
authors = ["CavalryTactics"]
edition = "2018"
 
[lib]
crate-type = ["cdylib"]
path = "src/client.rs"

[dependencies]
log = "0.4"
wasm-logger = "0.2"
serde = "1.0"
serde_derive = "1.0"

# common
flate2 = "1.0.14"
tar = "0.4.26"
serde_yaml = "0.8"
serde_json = "1.0"
bincode = "1.0"
snailquote = "0.3.0"

seed = { git = "https://github.com/seed-rs/seed" }