[package]
name = "c"
version = "0.1.0"
authors = ["0"]
edition = "2018"
 
[lib]
crate-type = ["cdylib"]

[dependencies]
seed = "0.7.0"
serde = "1.0.106"
uuid = { version = "0.8.1", features = ["serde", "v4", "wasm-bindgen"] }
indexmap = { version = "1.3.2", features = ["serde-1"] }
enclose = "1.1.8"

serde_json = "1.0"
graphql_client = "0.9.0"